--- a/_layouts/timeline.html
+++ b/_layouts/timeline.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="timeline-header">
-  <a href="{{ site.baseurl }}/" class="back-button">← Back</a>
+  <a href="{{ site.baseurl }}/" class="back-button">↶ Back</a>
   <h1>{{ page.title }}</h1>
 </div>
 
