--- a/_layouts/timeline.html
+++ b/_layouts/timeline.html
@@ -6,13 +6,24 @@ layout: default
   <h1>{{ page.title }}</h1>
 </div>
 
-<main>
-  <div class="timeline">
+<nav class="toc">
+  <strong>Contents</strong>
+  <ul>
     {% assign sorted_docs = site[page.collection] | sort: 'date' | reverse %}
+    {% for doc in sorted_docs %}
+      <li>
+        <a href="#{{ doc.title | slugify }}">{{ doc.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+</nav>
+
+<main class="with-toc">
+  <div class="timeline">
     {% for doc in sorted_docs %}
       <div class="timeline-item">
         <div class="timeline-content">
-          <div class="timeline-entry-header">
+          <div class="timeline-entry-header" id="{{ doc.title | slugify }}">
             <h2>{{ doc.title }}</h2>
             <span class="timeline-date">{{ doc.date | date: "%b %d, %Y" }}</span>
           </div>
@@ -22,3 +33,5 @@ layout: default
     {% endfor %}
   </div>
 </main>
+
+<script src="{{ '/assets/js/toc.js' | relative_url }}" defer></script>
